--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,7 @@ spring.application.name=safetynet
 server.port=8080
 
 #Log level configuration
+logging.file.name=src/main/resources/log-file.log
 logging.level.root=ERROR
+logging.level.org.springframework.web=DEBUG
 logging.level.com.openclassrooms=INFO
-logging.level.org.springframework.boot.autoconfigure.h2=INFO
-logging.level.org.springframework.boot.web.embedded.tomcat=INFO
-
