Add validation for models Modify http responses to better reflect whether or not request was successfull or not

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ server.port=8080
 logging.file.name=src/main/resources/log-file.log
 logging.level.root=ERROR
 logging.level.org.springframework.web=DEBUG
-logging.level.com.openclassrooms=INFO
+logging.level.com.openclassrooms=DEBUG
