--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ logging.file.name=src/main/resources/log-file.log
 logging.level.root=ERROR
 logging.level.org.springframework.web=DEBUG
 logging.level.com.openclassrooms=DEBUG
+
+#actuator
+management.endpoints.web.exposure.include=*
