Return empty objects when no data is found. Logs added for satefynet controller endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,11 @@ spring.application.name=safetynet
 #Tomcat configuration
 server.port=8080
 
+
 #Log level configuration
 logging.file.name=src/main/resources/log-file.log
 logging.level.root=ERROR
 logging.level.org.springframework.web=DEBUG
-logging.level.com.openclassrooms=DEBUG
+logging.level.com.safetynet=DEBUG
+
+
