--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,14 @@ server.port=8080
 
 
 #Log level configuration
-logging.file.name=src/main/resources/log-file.log
+logging.file.name=log-file.log
 logging.level.root=ERROR
 logging.level.org.springframework.web=DEBUG
 logging.level.com.safetynet=DEBUG
 
+#Actuator
+management.endpoints.web.exposure.include=*
+management.trace.http.include=RESPONSE_HEADERS
 
+#Request Logging Filter
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
